--- a/markup/public/public_layout.html
+++ b/markup/public/public_layout.html
@@ -1,1 +1,5 @@
-This is the public page
+<div class="page-content">
+    <nav></nav>
+    <div class="pages-container"></div>
+</div>
+<footer></footer>
