Adding class to nav

--- a/markup/public/public_layout.html
+++ b/markup/public/public_layout.html
@@ -1,5 +1,5 @@
 <div class="page-content">
-    <nav></nav>
+    <nav class="main-nav"></nav>
     <div class="pages-container"></div>
 </div>
 <footer></footer>
