--- a/markup/public/nav_main_public.html
+++ b/markup/public/nav_main_public.html
@@ -1,19 +1,7 @@
 <div class="container-fluid">
     <div class="row align-i-center">
-        <div class="col-xs-12 col-sm-3">
-            <div>
-                Service Administration
-            </div>
-        </div>
-        <div class="col-xs-12 col-sm-9 text-right">
-            <ul class="public-nav-ul nav-toggle-btn m-t-b-0 pl-0 ">
-                <li class="toggle-main-nav text-right">
-                    <img class="menu-icon" src="/!/images/menu.svg" alt="">
-                </li>
-            </ul>
-            <ul class="public-nav-ul m-t-b-0 pl-0 collapsable-nav">
-                <li data-element="signin"><a href="signin">Login</a></li>
-            </ul>
+        <div class="col-xs-12 col-sm-3 nav-title">
+            Service Administration
         </div>
     </div>
 </div>
