Private navbar links

--- a/markup/private/nav_main_private.html
+++ b/markup/private/nav_main_private.html
@@ -1,38 +1,28 @@
 <div class="container-fluid">
     <div class="row private-nav align-i-center">
-        <div class="col-xs-12 col-sm-1 logo-col">
-            <div class="private-logo">
-                <img data-element="jillix-logo" class="jillix-logo" src="/!/images/jillix-logo.svg" alt="">
-            </div>
+        <div class="col-xs-12 col-sm-2 logo-col">
+            Service Administration
         </div>
-        <div class="col-xs-12 col-sm-4 first-col">
+        <div class="col-xs-12 col-sm-9 first-col">
             <ul class="nav-toggle-btn mb-0 pl-0">
                 <li class="toggle-main-nav text-right">
                     <img class="menu-icon" src="/!/images/menu.svg" alt="">
                 </li>
             </ul>
             <ul class="collapsable-nav-1">
-                <li data-element="apps"><a><div class="svg-apps"></div> Apps</a></li>
-                <li data-element="stores"><a><div class="svg-database"></div> Stores</a></li>
-                <li data-element="domains"><a><div class="svg-earth"></div>Domains</a></li>
+                <li data-element="documentation"><a> Documentation</a></li>
+                <li data-element="tutorials"><a> Tutorials</a></li>
+                <li data-element="support"><a>Support</a></li>
+                <li data-element="contact"><a>Contact</a></li>
+                <li data-element="about"><a>About</a></li>
+                <li data-element="blog"><a>Blog</a></li>
+                <li data-element="terms"><a>Terms</a></li>
+                <li data-element="privacy"><a>Privacy</a></li>
             </ul>
         </div>
-        <div class="col-xs-12 col-sm-7 second-col">
+        <div class="col-xs-12 col-sm-1 second-col">
             <ul class="collapsable-nav-2">
-                <li data-element="blog"><a>Blog</a></li>
-                <li data-element="docs"><a>Docs</a></li>
-                <li data-element="support"><a>Help</a></li>
-                <li class="li-icon" data-element="user"><a><div class="svg-account"></div></a></li>
-                <li class="li-icon dropdown" data-element="dropdown"><a><div class="svg-directions"></div></a></li>
-                <li class="li-icon" data-element="settings"><a><div class="svg-settings"></div></a></li>
                 <li class="li-icon" data-element="signout"><a><div class="svg-signout"></div></a></li>
-
-                <div class="direction-arrow hide"></div>
-                <div class="direction-toggle hide">
-                    <a data-element="new-app">App..</a>
-                    <a data-element="new-store">Store..</a>
-                    <a data-elemetn="new-domain">Domain..</a>
-                </div>
             </ul>
         </div>
     </div>
