--- a/markup/private/nav_main_private.html
+++ b/markup/private/nav_main_private.html
@@ -1,7 +1,9 @@
 <div class="container-fluid">
     <div class="row private-nav align-i-center">
         <div class="col-xs-12 col-sm-2 logo-col">
-            Service Administration
+            <ul class="logo-ul">
+                <li data-element="admin-logo"><a>Service Administration</a></li>
+            </ul>
         </div>
         <div class="col-xs-12 col-sm-9 first-col">
             <ul class="nav-toggle-btn mb-0 pl-0">
