Section navigation menu

--- a/markup/private/nav_main_private.html
+++ b/markup/private/nav_main_private.html
@@ -38,12 +38,12 @@
             <div class="active-visible">
                 <li data-element="money"><a>Money</a></li>
                 <li data-element="infrastructure" class="hide"><a>Infrastructure</a></li>
-                <li data-element="user" class="hide"><a>User management</a></li>
+                <li data-element="user-management" class="hide"><a>User management</a></li>
             </div>
             <div class="hide navigation-menu-hidden">
                 <li data-element="money"><a>Money</a></li>
                 <li data-element="infrastructure"><a>Infrastructure</a></li>
-                <li data-element="user"><a>User management</a></li>
+                <li data-element="user-management"><a>User management</a></li>
             </div>
         </ul>
     </div>
