Added money options layout

--- a/markup/private/money.html
+++ b/markup/private/money.html
@@ -1,1 +1,8 @@
 This is the money page
+<div class="money-options">
+    <div class="invoices hide"></div>
+    <div class="history hide"></div>
+    <div class="credit-card-info hide"></div>
+    <div class="vouchers hide"></div>
+    <div class="earnings hide"></div>
+</div>
