Big commit added money nav

--- a/markup/private/money_options.html
+++ b/markup/private/money_options.html
@@ -1,15 +1,11 @@
-<div class="container-fluid nav-app-options no-select">
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="app-nav"><ul></ul></div>
-        </div>
-    </div>
+<div class="money-nav">
+    <ul>
+    </ul>
 </div>
-<div class="app-options">
-    <div class="app-dashboard hide"></div>
-    <div class="app-editor hide"></div>
-    <div class="app-terminal hide"></div>
-    <div class="app-settings hide"></div>
-    <div class="app-deploy hide"></div>
-    <div class="app-builder hide"></div>
+<div class="money-options">
+    <div class="invoices hide"></div>
+    <div class="history hide"></div>
+    <div class="credit-card hide"></div>
+    <div class="vouchers hide"></div>
+    <div class="earnings hide"></div>
 </div>
