Big commit money options

--- a/markup/private/money.html
+++ b/markup/private/money.html
@@ -1,6 +1,6 @@
 This is the money page
 <div class="money-options">
-    <div class="invoices hide"></div>
+    <div class="invoices hide">Invoices</div>
     <div class="history hide"></div>
     <div class="credit-card-info hide"></div>
     <div class="vouchers hide"></div>
