--- a/markup/private/nav_money.html
+++ b/markup/private/nav_money.html
@@ -1,4 +1,4 @@
-<li role="presentation" data-element="invoices"><a href="{baseUrl}/invoices">Invoices</a></li>
+<li role="presentation" data-element="invoices"><a href="{baseUrl}/money/invoices">Invoices</a></li>
 <li role="presentation" data-element="history"><a href="{baseUrl}/history">History</a></li>
 <li role="presentation" data-element="creditcard"><a href="{baseUrl}/credit-cards">Credit cards</a></li>
 <li role="presentation" data-element="vouchers"><a href="{baseUrl}/vouchers">Vouchers</a></li>
