Adding dashboard to the menu

--- a/markup/private/nav_main_private.html
+++ b/markup/private/nav_main_private.html
@@ -36,14 +36,16 @@
     <div class="row">
         <ul class="navigation-menu">
             <div class="active-visible">
-                <li data-element="money"><a>Money</a></li>
-                <li data-element="infrastructure" class="hide"><a>Infrastructure</a></li>
+                <li data-element="dashboard" class="dashboard"><a>Dashboard</a></li>
                 <li data-element="user-management" class="hide"><a>User management</a></li>
+                <li data-element="infrastructure" class="hide"><a>Infrastructure</a></li>
+                <li data-element="money" class="hide"><a>Money</a></li>
             </div>
             <div class="hide navigation-menu-hidden">
-                <li data-element="money"><a>Money</a></li>
-                <li data-element="infrastructure"><a>Infrastructure</a></li>
+                <li data-element="dashboard"><a>Dashboard</a></li>
                 <li data-element="user-management"><a>User management</a></li>
+                <li data-element="infrastructure"><a>Infrastructure</a></li>
+                <li data-element="money"><a>Money</a></li>
             </div>
         </ul>
     </div>
