User management nav div

--- a/markup/private/user-management/user_management.html
+++ b/markup/private/user-management/user_management.html
@@ -1,3 +1,4 @@
+<div class="users-management-nav"></div>
 This is the user-management page with two divs
 <div class="users">This is the users div</div>
 <div class="organizations">This is the organizations div</div>
