User management ul

--- a/markup/private/user-management/user_management.html
+++ b/markup/private/user-management/user_management.html
@@ -1,4 +1,7 @@
-<div class="users-management-nav"></div>
+<div class="user-management-nav default-nav container-fluid">
+    <ul>
+    </ul>
+</div>
 This is the user-management page with two divs
 <div class="users">This is the users div</div>
 <div class="organizations">This is the organizations div</div>
