Removing href and renaming data-element in nav user management html

--- a/markup/private/user-management/nav_user_management.html
+++ b/markup/private/user-management/nav_user_management.html
@@ -1,2 +1,2 @@
-<li role="presentation" data-element="Users"><a href="{baseUrl}/money/invoices">Users</a></li>
-<li role="presentation" data-element="Organizations"><a href="{baseUrl}/history">Organizations</a></li>
+<li role="presentation" data-element="users"><a>Users</a></li>
+<li role="presentation" data-element="organizations"><a>Organizations</a></li>
