--- a/markup/private/user-management/user_management.html
+++ b/markup/private/user-management/user_management.html
@@ -2,5 +2,5 @@
     <ul>
     </ul>
 </div>
-<div class="users">This is the users div</div>
-<div class="organizations">This is the organizations div</div>
+<div class="users"></div>
+<div class="organizations"></div>
