Specific item container

--- a/markup/private/user-management/user_management.html
+++ b/markup/private/user-management/user_management.html
@@ -2,5 +2,8 @@
     <ul>
     </ul>
 </div>
-<div class="users"></div>
-<div class="organizations"></div>
+<div class="user-management-content">
+    <div class="users"></div>
+    <div class="organizations"></div>
+    <div class="specific-item"></div>
+</div>
