User management/item html with basic draft

--- a/markup/private/user-management/specific_item.html
+++ b/markup/private/user-management/specific_item.html
@@ -1,1 +1,90 @@
-Hello! This is the specific item of the users-management section.
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h3>User name or Organization name</h3>
+        </div>
+        <div class="col-xs-12 col-sm-6 input-column">
+            <input class="input-add-on-search general-search" placeholder="Search an element">
+        </div>
+    </div>
+</div>
+<div class="instructions">
+    <p>Users. <br> Custom users specifications.</p>
+</div>
+<div class="section-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 col-sm-8 circles-list">
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <div class="light green-light"></div>
+                            <p>User 1</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <div class="light green-light"></div>
+                            <p>User 2</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <div class="light orange-light"></div>
+                            <p>User 3</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <div class="light red-light"></div>
+                            <p>User 4</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-12 col-sm-4">
+                <div class="default-form">
+                    <div class="default-form-item">
+                        <!-- Remove user form -->
+                        <div class="title">Remove user</div>
+                        <div class="border"></div>
+                        <div class="change-settings-inputs">
+                            <div class="row form-input">
+                                <div class="col-xs-12">
+                                    <div class="input-add-on">
+                                        <input type="" placeholder="Write the user name and click Remove">
+                                        <button id="btnApps" class="btn btn-left-0 btn-c2" type="button">Remove</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="default-form-item">
+                        <!-- Delete account -->
+                        <div class="title">Remove user</div>
+                        <div class="border"></div>
+                        <div class="row form-input">
+                            <div class="col-xs-12">
+                                <input class="input-warning" type="" placeholder="Write the user name and click remove">
+                            </div>
+                        </div>
+                        <p class="settings-warning">
+                            Once you delete your account, there is no going back.<br>Please be certain.
+                        </p>
+                    </div>
+
+                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
