--- a/markup/private/user-management/specific_item.html
+++ b/markup/private/user-management/specific_item.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12 col-sm-6">
-            <h3>User name or Organization name</h3>
+            <h3>Here goes the name of the user or the organization</h3>
         </div>
         <div class="col-xs-12 col-sm-6 input-column">
             <input class="input-add-on-search general-search" placeholder="Search an element">
@@ -13,78 +13,81 @@
 </div>
 <div class="section-content">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-12 col-sm-8 circles-list">
-                <div class="circle-container-no-flip">
-                    <div class="circle">
-                        <div class="circle-front">
-                            <div class="light green-light"></div>
-                            <p>User 1</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="circle-container-no-flip">
-                    <div class="circle">
-                        <div class="circle-front">
-                            <div class="light green-light"></div>
-                            <p>User 2</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="circle-container-no-flip">
-                    <div class="circle">
-                        <div class="circle-front">
-                            <div class="light orange-light"></div>
-                            <p>User 3</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="circle-container-no-flip">
-                    <div class="circle">
-                        <div class="circle-front">
-                            <div class="light red-light"></div>
-                            <p>User 4</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-12 col-sm-4">
-                <div class="default-form">
-                    <div class="default-form-item">
-                        <!-- Remove user form -->
-                        <div class="title">Remove user</div>
-                        <div class="border"></div>
-                        <div class="change-settings-inputs">
-                            <div class="row form-input">
-                                <div class="col-xs-12">
-                                    <div class="input-add-on">
-                                        <input type="" placeholder="Write the user name and click Remove">
-                                        <button id="btnApps" class="btn btn-left-0 btn-c2" type="button">Remove</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+	<div class="row">
+	    <div class="col-xs-12 col-sm-7 circles-list">
+		<div class="circle-container-no-flip">
+		    <div class="circle">
+			<div class="circle-front">
+			    <div class="light green-light"></div>
+			    <p>Derendinger</p>
+			    <div class="type">Owner</div>
+			</div>
+		    </div>
+		</div>
+		<div class="circle-container-no-flip">
+		    <div class="circle">
+			<div class="circle-front">
+			    <div class="light green-light"></div>
+			    <p>Pradas</p>
+			    <div class="type">Read</div>
+			</div>
+		    </div>
+		</div>
+		<div class="circle-container-no-flip">
+		    <div class="circle">
+			<div class="circle-front">
+			    <div class="light green-light"></div>
+			    <p>McLarren</p>
+			    <div class="type">Write</div>
+			</div>
+		    </div>
+		</div>
+	    </div>
 
-                    <div class="default-form-item">
-                        <!-- Delete account -->
-                        <div class="title">Remove user</div>
-                        <div class="border"></div>
-                        <div class="row form-input">
-                            <div class="col-xs-12">
-                                <input class="input-warning" type="" placeholder="Write the user name and click remove">
-                            </div>
-                        </div>
-                        <p class="settings-warning">
-                            Once you delete your account, there is no going back.<br>Please be certain.
-                        </p>
-                    </div>
+	    <div class="col-xs-12 col-sm-4">
+		<div class="default-form">
+		    <div class="default-form-item">
+			<!-- Block user form -->
+			<div class="title">Block user</div>
+			<div class="border"></div>
+			<div class="change-settings-inputs">
+			    <div class="row form-input">
+				<div class="col-xs-12">
+				    <div class="input-add-on">
+					<input type="" placeholder="Enter the user name">
+					<button id="btnApps" class="btn btn-left-0 btn-c2" type="button">Block</button>
+				    </div>
+				</div>
+			    </div>
+			</div>
+		    </div>
 
-                </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+		    <div class="default-form-item">
+			<!-- Remove user form -->
+			<div class="title">Delete project</div>
+			<div class="border"></div>
+			<div class="change-settings-inputs">
+			    <div class="row form-input">
+				<div class="col-xs-12">
+				    <div class="input-add-on">
+					<input type="" placeholder="Enter the project name">
+					<button id="btnApps" class="btn btn-left-0 btn-c4" type="button">Delete project</button>
+				    </div>
+				    <p class="settings-warning">
+					Once you delete this project, there is no going back. Please be certain.
+				    </p>
+				</div>
+			    </div>
+			</div>
+		    </div>
+
+
+
+		</div>
+	    </div>
+
+
+
+	</div>
     </div>
 </div>
