Engine versioning page

--- a/markup/private/infrastructure/versions_list.html
+++ b/markup/private/infrastructure/versions_list.html
@@ -1,1 +1,70 @@
-Hello I am the versions management page
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h3>Engine versions</h3>
+        </div>
+        <div class="col-xs-12 col-sm-6 input-column">
+            <input class="input-add-on-search general-search" placeholder="Search an element">
+        </div>
+    </div>
+</div>
+<div class="instructions">
+    <p>Current engine versions. <br> Versioning specifications.</p>
+</div>
+<div class="section-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 col-sm-11 circles-list">
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <p>User 1</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <p>v3</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <p>v2</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <p>v1</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <p>no-streams</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <p>v0.1.0-alpha</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="circle-container-no-flip">
+                    <div class="circle">
+                        <div class="circle-front">
+                            <p>pre-alpha</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
