Servers, log, applications status tables

--- a/markup/private/infrastructure/infrastructure_list.html
+++ b/markup/private/infrastructure/infrastructure_list.html
@@ -1,1 +1,162 @@
-I am the infrastructure list gcp.
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12 col-sm-6">
+            <h3>CGP infrastructure</h3>
+        </div>
+        <div class="col-xs-12 col-sm-6 input-column">
+            <input class="input-add-on-search general-search" placeholder="Search an element">
+        </div>
+    </div>
+</div>
+<div class="instructions">
+    <p>
+        These are the main settings for your domain. <br>
+        Changing details here can have major impacts on your running projects.
+    </p>
+</div>
+<div class="default-form">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 col-md-6 col-lg-5">
+                <div class="default-form-item">
+                    <!-- Servers -->
+                    <div class="title">Servers</div>
+                    <div class="border"></div>
+                    <table class="a-records">
+                        <tr>
+                            <td>Field</td>
+                            <td>Field</td>
+                            <td>Other field</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="not-edit">@</div>
+                                <input class="to-edit hide" value="@">
+                            </td>
+                            <td>
+                                <div class="not-edit">1 Hour</div>
+                                <input class="to-edit hide" value="1 Hour">
+                            </td>
+                            <td>
+                                <div class="not-edit">86.132.25.177</div>
+                                <input class="to-edit hide" value="86.132.25.177">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="not-edit">@</div>
+                                <input class="to-edit hide" value="@">
+                            </td>
+                            <td>
+                                <div class="not-edit">2 Hour</div>
+                                <input class="to-edit hide" value="1 Hour">
+                            </td>
+                            <td>
+                                <div class="not-edit">145.132.25.254</div>
+                                <input class="to-edit hide" value="86.132.25.177">
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+
+                <div class="default-form-item">
+                    <!-- Servers -->
+                    <div class="title">Logs</div>
+                    <div class="border"></div>
+                    <table class="a-records">
+                        <tr>
+                            <td>Field</td>
+                            <td>Field</td>
+                            <td>Other field</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="not-edit">@</div>
+                                <input class="to-edit hide" value="@">
+                            </td>
+                            <td>
+                                <div class="not-edit">1 Hour</div>
+                                <input class="to-edit hide" value="1 Hour">
+                            </td>
+                            <td>
+                                <div class="not-edit">86.132.25.177</div>
+                                <input class="to-edit hide" value="86.132.25.177">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <div class="not-edit">@</div>
+                                <input class="to-edit hide" value="@">
+                            </td>
+                            <td>
+                                <div class="not-edit">2 Hour</div>
+                                <input class="to-edit hide" value="1 Hour">
+                            </td>
+                            <td>
+                                <div class="not-edit">145.132.25.254</div>
+                                <input class="to-edit hide" value="86.132.25.177">
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+
+                <!-- Advanced options -->
+                <div class="default-form-item">
+                    <div class="domain-adv-option">
+                        <div class="option">Applications status <span class="pl-xs octicon octicon-chevron-right"></span> <span class="pl-xs octicon octicon-chevron-down hide"></span></div>
+                        <div class="adv-container hide">
+                            <div class="default-form-item">
+                                <!-- A records -->
+                                <div class="title">Applications status</div>
+                                <div class="border"></div>
+                                <table class="a-records">
+                                    <tr>
+                                        <td>Aplication name</td>
+                                        <td>Current status</td>
+                                        <td>Url</td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <div class="not-edit">MyCapptain<div>
+                                        </td>
+                                        <td>
+                                            <div class="not-edit">running</div>
+                                        </td>
+                                        <td>
+                                            <div class="not-edit">http://mycapptain.com</div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <div class="not-edit">Pradas</div>
+                                        </td>
+                                        <td>
+                                            <div class="not-edit">paused</div>
+                                        </td>
+                                        <td>
+                                            <div class="not-edit">145.132.25.254</div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
+                                            <div class="not-edit">moto2</div>
+                                        </td>
+                                        <td>
+                                            <div class="not-edit">running</div>
+                                        </td>
+                                        <td>
+                                            <div class="not-edit">http://moto2.ch</div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
