Specific item update

--- a/markup/private/user-management/specific_item.html
+++ b/markup/private/user-management/specific_item.html
@@ -48,14 +48,14 @@
 		<div class="default-form">
 		    <div class="default-form-item">
 			<!-- Block user form -->
-			<div class="title">Block user</div>
+			<div class="title">Activate user</div>
 			<div class="border"></div>
 			<div class="change-settings-inputs">
 			    <div class="row form-input">
 				<div class="col-xs-12">
 				    <div class="input-add-on">
 					<input type="" placeholder="Enter the user name">
-					<button id="btnApps" class="btn btn-left-0 btn-c2" type="button">Block</button>
+					<button id="btnApps" class="btn btn-left-0 btn-c2" type="button">Deactivate</button>
 				    </div>
 				</div>
 			    </div>
@@ -64,17 +64,17 @@
 
 		    <div class="default-form-item">
 			<!-- Remove user form -->
-			<div class="title">Delete project</div>
+			<div class="title">Delete user</div>
 			<div class="border"></div>
 			<div class="change-settings-inputs">
 			    <div class="row form-input">
 				<div class="col-xs-12">
 				    <div class="input-add-on">
-					<input type="" placeholder="Enter the project name">
+					<input type="" placeholder="Enter the user name">
 					<button id="btnApps" class="btn btn-left-0 btn-c4" type="button">Delete project</button>
 				    </div>
 				    <p class="settings-warning">
-					Once you delete this project, there is no going back. Please be certain.
+					Once you delete this user, there is no going back. Please be certain.
 				    </p>
 				</div>
 			    </div>
