--- a/markup/private/infrastructure/infrastructure_list.html
+++ b/markup/private/infrastructure/infrastructure_list.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-xs-12 col-sm-6">
-            <h3>CGP infrastructure</h3>
+            <h3>GCP infrastructure</h3>
         </div>
         <div class="col-xs-12 col-sm-6 input-column">
             <input class="input-add-on-search general-search" placeholder="Search an element">
