--- a/markup/private/infrastructure/versions_list.html
+++ b/markup/private/infrastructure/versions_list.html
@@ -58,6 +58,14 @@
                     </div>
                 </div>
             </div>
+            <div class="col-xs-12 col-sm-1">
+                <div class="legend">
+                    <div data-element="btnNew" class="plus-circle">
+                        <span class="mega-octicon octicon-plus"></span>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </div>
