Container for new engine version

--- a/markup/private/infrastructure/infrastructure.html
+++ b/markup/private/infrastructure/infrastructure.html
@@ -4,6 +4,7 @@
 </div>
 <div class="infrastructure-content">
     <div class="version-management"></div>
+    <div class="new-engine-version"></div>
     <div class="gcp-infrastructure"></div>
     <div class="jillix-infrastructure"></div>
 </div>
